--- a/FUNDAMENTOS2_CyP_1157.ipynb
+++ b/FUNDAMENTOS2_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS2_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPAjIa7kIM3bQFu/4/pQAr4",
+      "authorship_tag": "ABX9TyPK6PAVByLyK1q9MUK9n94U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -668,7 +668,7 @@
         "cliente[\"productos\"][\"ahorro\"][\"ahorro\"]-=1500.0\n",
         "print(cliente[\"productos\"])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +792,7 @@
         "  print(\"Otra cosa\")#los tabuladores se utilizan para las estructuras\n",
         "print(\"Fin del programa\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +823,7 @@
         "    print(\"Aprobado\")\n",
         "print (\"Fin del programa\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,7 +842,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dJV9i_hUXXOJ",
-        "outputId": "aac33ffe-2823-4b6a-950d-ada13bcc675f"
+        "outputId": "cd3ea68c-efd4-4344-fa04-2397ea158d27"
       },
       "source": [
         "SUE=float(input(\"Dame tu sueldo: \"))\n",
@@ -851,7 +851,7 @@
         "    MSUE = SUE + AUM\n",
         "    print(f\"Tu sueldo actual es de: {MSUE}\")"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,6 +859,462 @@
           "text": [
             "Dame tu sueldo: 875.50\n",
             "Tu sueldo actual es de: 1006.825\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jc-ynAA8HNAV"
+      },
+      "source": [
+        "# Estructura de datos por bifucación\n",
+        "\n",
+        "Esta estructura, selecciona una de dos opciones de ejecución, se ejecuta un bloque si la condición se cumple o ejecuta o otro bloque si no se cumple\n",
+        "\n",
+        "```\n",
+        "if <condicion> =\n",
+        "    <bloque de ejecución>\n",
+        "else:\n",
+        "    <bloque de ejecución alterno>\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jcGGmrNWIiBT",
+        "outputId": "7231b851-5bf4-425e-9610-9b041d79027a"
+      },
+      "source": [
+        "edad=int(input(\"Dame tu edad: \"))\n",
+        "print(f\"Tecleaste {edad} años\")\n",
+        "if edad >= 18:\n",
+        "    print(\"Eres mayor de edad, te tú cheve\")\n",
+        "else:\n",
+        "    print(\"Eres menor de edad, ten tu Boing de mango\")\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu edad: 18\n",
+            "Tecleaste 18 años\n",
+            "Eres mayor de edad, te tú cheve\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QBANj8aVJLZ6",
+        "outputId": "faf5e2c8-8c73-4b48-fa3b-f83ce5d77767"
+      },
+      "source": [
+        "edad=int(input(\"Dame tu edad: \"))\n",
+        "print(f\"Tecleaste {edad} años\")\n",
+        "dinero=float(input(\"¿Cuanto dinero tienes?: \"))\n",
+        "print(f\"Tecleaste {dinero} pesos\")\n",
+        "if edad >= 18 and dinero >= 36:\n",
+        "    print(\"Eres mayor de edad, te tú cheve\")\n",
+        "else:\n",
+        "    print(\"Eres menor de edad, ten tu Boing de mango\")\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu edad: 19\n",
+            "Tecleaste 19 años\n",
+            "¿Cuanto dinero tienes?: 60\n",
+            "Tecleaste 60.0 pesos\n",
+            "Eres mayor de edad, te tú cheve\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lAbJrJR1KK6M",
+        "outputId": "e00a3b0d-b74e-4c2e-8417-6289defd57be"
+      },
+      "source": [
+        "edad = int (input(\"Dame tu edad: \"))\n",
+        "dinero = int (input(\"¿Cuánto dinero tienes?: -0.\"))\n",
+        "if edad >= 18:\n",
+        "    if dinero >=35:\n",
+        "        print(\"Eres mayor de edad y tienes dinero, ten tu cheve\")\n",
+        "    else:\n",
+        "        print(\"No tienes suficiente dinero\")\n",
+        "else:\n",
+        "    print(\"Eres menor de edad, ten tu Boing\")\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu edad: 15\n",
+            "¿Cuánto dinero tienes?: 15\n",
+            "Eres menor de edad, ten tu Boing\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pNMkwdmrMweJ"
+      },
+      "source": [
+        "El codigo anterior, se puede simplificar usando"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xh9dW2QCNHYm",
+        "outputId": "ae0d5033-646b-46e5-a5bc-02f85fd429f8"
+      },
+      "source": [
+        "edad = int(input(\"Dame tu edad: \"))\n",
+        "dinero = float(input(\"Cuanto dinero tienes: \"))\n",
+        "print(f\"Tecleaste {edad} años\")\n",
+        "print(f\"Tecleaste {dinero} dinero\")\n",
+        "if edad >= 18 :\n",
+        "    if dinero >=36 :\n",
+        "        print(\"Ten tu cheve\")\n",
+        "    else:\n",
+        "        print(\"Tienes la edad pero no tienes dinero suficiente\")\n",
+        "elif dinero >= 36 :\n",
+        "    print(\"Tienes dinero suficiente pero no tienes la edad\")\n",
+        "else:\n",
+        "    print(\"No tienes la edad ni el dinero, ve a jugar roblox a tu casa\")"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu edad: 14\n",
+            "Cuanto dinero tienes: 10\n",
+            "Tecleaste 14 años\n",
+            "Tecleaste 10.0 dinero\n",
+            "No tienes la edad ni el dinero, ve a jugar roblox a tu casa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wdBskEZ9OcGT",
+        "outputId": "bf678697-91c2-409c-9c86-f7bad48283a7"
+      },
+      "source": [
+        "CAL=float(input(\"Dame la calificación: \"))\n",
+        "print(f\"La calificación es {CAL}\")\n",
+        "if CAL >= 8:\n",
+        "    print(\"Aprobado\")\n",
+        "else:\n",
+        "    print(\"Reprobado\")"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame la calificación: 7.9\n",
+            "La calificación es 7.9\n",
+            "Reprobado\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Mi5Z-YtdO7Wp",
+        "outputId": "0888e69c-aade-4414-cd54-7818032eddd0"
+      },
+      "source": [
+        "SUE=float(input(\"Dame tu sueldo: \"))\n",
+        "if SUE < 1000:\n",
+        "    AUM = SUE * 0.15\n",
+        "    NSUE = SUE + AUM\n",
+        "else:\n",
+        "    AUM = SUE * 0.12\n",
+        "    NSUE= SUE + AUM\n",
+        "print(f\"Tu sueldo actual es de: {NSUE}\")"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu sueldo: 1000\n",
+            "Tu sueldo actual es de: 1120.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C8wXd6dkRbUm",
+        "outputId": "150cba74-612b-478d-e8e2-0062e4058f93"
+      },
+      "source": [
+        "SUE=float(input(\"Dame tu sueldo: \"))\n",
+        "if SUE < 1000:\n",
+        "    NSUE=SUE * 1.15\n",
+        "else:\n",
+        "    NSUE = SUE * 1.12\n",
+        "print(f\"Tu nuevo sueldo es {NSUE}\")"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame tu sueldo: 1000\n",
+            "Tu nuevo sueldo es 1120.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pSqwW34ZR5Rb",
+        "outputId": "fd5e86fb-23c3-4a52-b534-2dac06002b5f"
+      },
+      "source": [
+        "# Ejejcicio if - else\n",
+        "# Hacer un programa que solicite el dia de la semana en un valor numerico\n",
+        "# entero del 1 al 7 (Avisarle al usuario si el usuario si proporciono un valor\n",
+        "# fuera del rango)\n",
+        "# Posterioirmente imprimira el dia de la semana correspondiente al numero \n",
+        "# capturado\n",
+        "\n",
+        "dia=int(input(\"Numero de dia de la semana: \"))\n",
+        "print(f\"Tecleaste el numero {dia}\")\n",
+        "if dia is 1:\n",
+        "    print(f\"El numero {dia} es el Lunes\")\n",
+        "elif dia is 2:\n",
+        "    print(f\"El numero {dia} es el Marte\")\n",
+        "elif dia is 3:\n",
+        "    print(f\"El numero {dia} es el Miercoles\")\n",
+        "elif dia is 4:\n",
+        "    print(f\"El numero {dia} es el Jueves\")\n",
+        "elif dia is 5:\n",
+        "    print(f\"El numero {dia} es el Viernes\")\n",
+        "elif dia is 6:\n",
+        "    print(f\"El numero {dia} es el Sabado\")\n",
+        "elif dia is 7:\n",
+        "    print(f\"El numero {dia} es el Domingo\")\n",
+        "else:\n",
+        "    print(\"Tu valor esta fuera del rango\")"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Numero de dia de la semana: 0\n",
+            "Tecleaste el numero 0\n",
+            "Tu valor esta fuera del rango\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EAnksGKbUSaJ",
+        "outputId": "335bafd1-5876-4b18-acc3-eff11da0daf6"
+      },
+      "source": [
+        "#Otra forma de solución\n",
+        "dia=int(input(\"Dame el día de la semana del 1-7: \"))\n",
+        "if dia is 1:\n",
+        "    print(\"LUNES\")\n",
+        "elif dia is 2:\n",
+        "    print(\"MARTES\")\n",
+        "elif dia is 3:\n",
+        "    print(\"MIERCOLES\")\n",
+        "elif dia is 4:\n",
+        "    print(\"JUEVES\")\n",
+        "elif dia is 5:\n",
+        "    print(\"VIERNES\")\n",
+        "elif dia is 6:\n",
+        "    print(\"SÁBADO\")\n",
+        "elif dia is 7:\n",
+        "    print(\"DOMINGO\")\n",
+        "else:\n",
+        "    print(\"Debe ser un numero del 1 al 7, ingresa nuevamente\")"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame el día de la semana del 1-7: 1\n",
+            "LUNES\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L9YTh7zEVMAH",
+        "outputId": "1381a644-87c6-42de-d2b5-bbf0b4ee533f"
+      },
+      "source": [
+        "dia = int(input(\"Ingresa un numero entre 1 y 7: \"))\n",
+        "print(f\"Capturaste el numero {dia}\")\n",
+        "\n",
+        "if dia >= 1 and dia <=7:\n",
+        "    if dia == 1:\n",
+        "        print(\"Lunes\")\n",
+        "    else:\n",
+        "        if dia == 2:\n",
+        "            print(\"Martes\")\n",
+        "        else:\n",
+        "            if dia == 3:\n",
+        "                print(\"Miercoles\")\n",
+        "            else:\n",
+        "                if dia == 4:\n",
+        "                    print(\"Jueves\")\n",
+        "                else:\n",
+        "                    if dia==5:\n",
+        "                        print(\"Viernes\")\n",
+        "                    else:\n",
+        "                        if dia == 6:\n",
+        "                            print(\"Sabado\")\n",
+        "                        else:\n",
+        "                            print(\"Domingo\")\n",
+        "else:\n",
+        "    print(\"Ese numero no estaq dentro del rango solicitado\")"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingresa un numero entre 1 y 7: 7\n",
+            "Capturaste el numero 7\n",
+            "Domingo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LeqEOxvya2Sh"
+      },
+      "source": [
+        "# Selección multiple\n",
+        "\n",
+        "En python no existe la estructura de selección swicht, en su lugar se emplea la palabra reservada:\n",
+        "\n",
+        "## elif <condición>\n",
+        "\n",
+        "Por ejemplo en el lenguaje C y Java seria de la forma\n",
+        "\n",
+        "```\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iAD9j_c8cp4b",
+        "outputId": "94451753-4532-418a-a1ce-6bce8117a8a4"
+      },
+      "source": [
+        "# ejemplo 2.7\n",
+        "\n",
+        "NUM = int(input(\"Dame un valor entre 1 y 3: \"))\n",
+        "V=float(input(\"Dame un valor float: \"))\n",
+        "VAL = 0\n",
+        "if NUM==1:\n",
+        "    VAL = 100 * V\n",
+        "elif NUM == 2:\n",
+        "    VAL = 100 ** V\n",
+        "elif NUM == 3:\n",
+        "    VAL = 100 / V\n",
+        "else:\n",
+        "    VAL= 0\n",
+        "print(VAL)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame un valor entre 1 y 3: 1\n",
+            "Dame un valor float: 10\n",
+            "1000.0\n"
           ]
         }
       ]
