--- a/FUNDAMENTOS3_CyP_1157.ipynb
+++ b/FUNDAMENTOS3_CyP_1157.ipynb
@@ -6,7 +6,7 @@
       "name": "FUNDAMENTOS3_CyP_1157.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDmhP732ENiYADZlIQ5DfX",
+      "authorship_tag": "ABX9TyNxjMULvQWaXh86kuOdQISL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,7 +206,7 @@
         "\n",
         "print(\"CUECER=\", CUECER0)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         "    x=n*i\n",
         "    print(f\"{n} x {i} = {x}\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +280,7 @@
         "        print(f\"{J} x {I} = {x}\")\n",
         "    print(\"\\n\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,7 +351,7 @@
         "    print(\"Fuera del rango 1-5\")\n",
         "            "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -424,7 +424,7 @@
         "numeros = [x*10 for x in range(1,11)]\n",
         "print(numeros)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +462,7 @@
         "print(edades)\n",
         "print(\"Promedio: \", suma/5)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,7 +496,7 @@
         "val = round(random.uniform(5,11) , 2)\n",
         "print(val)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -523,13 +523,263 @@
         "print(valores)\n",
         "# imprimir el numero mayor y menor, a su vez hacer el promedio"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[8.28, 9.36, 9.35, 10.16, 8.17, 6.28, 8.02, 7.94, 8.43, 8.57, 6.41, 5.21, 7.16, 6.1, 9.97, 9.86, 7.72, 6.37, 8.04, 6.2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HZT4ODZx5H8R"
+      },
+      "source": [
+        "# Estructura de control de repetición Haz - mientras\n",
+        "\n",
+        "Una estructura de control haz - mientras nos permite ejecutare repetidamente mientras una condición se siga cumpliendo\n",
+        "\n",
+        "## Sintaxis\n",
+        "```\n",
+        "while <condición>:\n",
+        "    <Bloque de sentencias a ejecutar repetidamente>\n",
+        "<siguiente sentencia posterior a while>\n",
+        "```\n",
+        "### La diferencia principal en comparación con la estructura for es que con WHILE No coneces el numero de ciclos a ejecutar en for si se conocen\n",
+        "\n",
+        "Como ejemplo iniciemos con el siguiente enunciado\n",
+        "\n",
+        "Hacer un programa que solicite un valor entero positivo y calcule repetidamente la mitad y se reasigne a la misma variable. El ciclo se debe detener cuando el resultaqdo sea menor que 1.\n",
+        "\n",
+        "Mostrar en pantalla el reesultado\n",
+        "\n",
+        "```\n",
+        "Dame un valor entero: 8\n",
+        "4.0\n",
+        "2.0\n",
+        "1.0\n",
+        "0.5\n",
+        "Fin del programa\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B1KkwgKm7pl4",
+        "outputId": "c0cc05de-d850-4c53-dea8-a53637fc4c7c"
+      },
+      "source": [
+        "valor = int(input(\"Introduce un numero positivo: \"))\n",
+        "contador=0\n",
+        "if valor > 0:\n",
+        "    while valor > 1.0:\n",
+        "        valor =valor/2\n",
+        "        print(round(valor,2))\n",
+        "        contador += 1\n",
+        "else:\n",
+        "    print(\"El numero es negativo, intenta de nuevo\")\n",
+        "print(\"Total de iteraciones=\",contador)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce un numero positivo: 3\n",
+            "1.5\n",
+            "0.75\n",
+            "Total de iteraciones= 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mjXJbYXr8aDl",
+        "outputId": "07c71d7d-8fea-49f0-cf63-8bb2d72b61d1"
+      },
+      "source": [
+        "valor=int(input(\"Dame un valor entero: \"))\n",
+        "\n",
+        "while valor!=0:\n",
+        "    print(valor)\n",
+        "    valor=int(input(\"Dame un valor entero: \"))\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Dame un valor entero: 4\n",
+            "4\n",
+            "Dame un valor entero: 0\n",
+            "Fin del programa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iXGgjRPB9wVc"
+      },
+      "source": [
+        "valor=int(input(\"Dame un valor entero: \"))\n",
+        "while valor!=0:\n",
+        "    print(valor)\n",
+        "    print(\"Otras cosas\")\n",
+        "print(\"Fin del programa\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pcai646K_c0z"
+      },
+      "source": [
+        "Escribe un programa que permita generar la tabla de multiplicar de un numero"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kjWiEqhQ_bfp",
+        "outputId": "6244b058-f6fd-46f0-8a9b-403b0e02b964"
+      },
+      "source": [
+        "n=int(input(\"Ingrese un numero entero positivo: \"))\n",
+        "\n",
+        "if n>0:\n",
+        "    print(\"Es correcto\")\n",
+        "\n",
+        "    for i in range (1,11):\n",
+        "        print(n,\"por\",i,\"es igual a:\", n*i)\n",
+        "else:\n",
+        "    print(\"El numero ingresado no es correcto\")"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero entero positivo: 3\n",
+            "Es correcto\n",
+            "3 por 1 es igual a: 3\n",
+            "3 por 2 es igual a: 6\n",
+            "3 por 3 es igual a: 9\n",
+            "3 por 4 es igual a: 12\n",
+            "3 por 5 es igual a: 15\n",
+            "3 por 6 es igual a: 18\n",
+            "3 por 7 es igual a: 21\n",
+            "3 por 8 es igual a: 24\n",
+            "3 por 9 es igual a: 27\n",
+            "3 por 10 es igual a: 30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4wV2WWIcCEo2",
+        "outputId": "e051904a-79f2-4b6f-d0d8-b0e1708c7fad"
+      },
+      "source": [
+        "comprobar = True\n",
+        "\n",
+        "while comprobar== True:\n",
+        "    n=int(input(\"Ingrese un numero entero positivo: \"))\n",
+        "\n",
+        "    if n>0:\n",
+        "        i=1\n",
+        "        while i<11:\n",
+        "            print(n,\"por\",i,\"es igual a:\",n*i)\n",
+        "            i+=1\n",
+        "            comprobar=False\n",
+        "    else:\n",
+        "        print(\"El numero ingresado no es correcto\")"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero entero positivo: -4\n",
+            "El numero ingresado no es correcto\n",
+            "Ingrese un numero entero positivo: -5\n",
+            "El numero ingresado no es correcto\n",
+            "Ingrese un numero entero positivo: 5\n",
+            "5 por 1 es igual a: 5\n",
+            "5 por 2 es igual a: 10\n",
+            "5 por 3 es igual a: 15\n",
+            "5 por 4 es igual a: 20\n",
+            "5 por 5 es igual a: 25\n",
+            "5 por 6 es igual a: 30\n",
+            "5 por 7 es igual a: 35\n",
+            "5 por 8 es igual a: 40\n",
+            "5 por 9 es igual a: 45\n",
+            "5 por 10 es igual a: 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YKlwnvJYKJei",
+        "outputId": "0a1343e4-e4d9-46ac-abdf-4e855f4ad690"
+      },
+      "source": [
+        "comprobar = True\n",
+        "while comprobar == True:\n",
+        "    n=int(input(\"Ingrese un numero positivo: \"))\n",
+        "    if n>0:\n",
+        "        resultado=0\n",
+        "        comprobar = False\n",
+        "        for i in range(1,n+1):\n",
+        "            resultado += (1/i)\n",
+        "        print(\"El resultado de la serie es:\",resultado)\n",
+        "        \n",
+        "    else:\n",
+        "        print(\"El numero ingresado no es correcto. Intente de nuevo\")"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un numero positivo: 5\n",
+            "El resultado de la serie es: 2.283333333333333\n"
           ]
         }
       ]
